Update register page

--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -18,7 +18,7 @@
                 <label>Password</label>
                 <input type="password"  name="password" class="form-control rounded-0"  required>
               </div>
-              <button type="button"  class="btn btn-primary float-right">Register</button>
+              <button type="button"  class="btn btn-primary mx-auto my-4">Register</button>
             </form>
           </div>
           <!--/card-block-->
