User login complete

--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -14,7 +14,7 @@
                 <label for="uname1">Username</label>
                 <input type="text" [(ngModel)]="registerUserData.email" name="email" class="form-control rounded-0" required>
               </div>
-              <div class="form-group">
+              <div class="form-group mt-4">
                 <label>Password</label>
                 <input type="password" [(ngModel)]="registerUserData.password" name="password" class="form-control rounded-0"  required>
               </div>
