--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -14,11 +14,11 @@
                 <label for="uname1">Username</label>
                 <input type="text" class="form-control rounded-0" [(ngModel)]="loginUserData.email" name="email" required>
               </div>
-              <div class="form-group">
+              <div class="form-group mt-4">
                 <label>Password</label>
                 <input type="password" class="form-control rounded-0" [(ngModel)]="loginUserData.password" name="password" required>
               </div>
-              <button type="button" (click)="loginUser()" class="btn btn-success float-right">Login</button>
+              <button type="button" (click)="loginUser()" class="btn btn-success my-4">Login</button>
             </form>
           </div>
           <!--/card-block-->
