--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -16,7 +16,7 @@
     <ul class="navbar-nav">
         <a class="nav-link" *ngIf="!_authService.loggedIn()"  routerLink="/login" routerLinkActive="active">Login</a>
         <a class="nav-link" *ngIf="!_authService.loggedIn()"  routerLink="/register" routerLinkActive="active">Register</a>
-        <a class="nav-link" *ngIf="_authService.loggedIn()" style="cursor:pointer">Logout</a>        
+        <a class="nav-link" *ngIf="_authService.loggedIn()" (click)="_authService.logoutUser()" style="cursor:pointer">Logout</a>        
     </ul>
   </div>
 </nav>    
